--- a/mod2/src/App.css
+++ b/mod2/src/App.css
@@ -1,6 +1,6 @@
 /* NavBar.css */
 .navbar {
-  background-color: #3B4CCA;
+  background-color: #3243c5;
   border-bottom: 2px solid #000;
   padding: 10px 20px;
 }
@@ -9,12 +9,12 @@
   margin: 0;
   font-size: 24px;
   font-weight: bold;
-  color: #000;
+  color: #ffffff;
 }
 
 .links a {
   text-decoration: none;
-  color: #000;
+  color: #ffffff;
   font-weight: bold;
   margin-right: 20px;
 }
