--- a/mod2/src/App.css
+++ b/mod2/src/App.css
@@ -139,3 +139,11 @@ body {
   font-size: 14px;
   text-transform: capitalize;
 }
+
+.pokeball {
+  position: absolute;
+  top: 10px; 
+  right: 10px; 
+  width: 40px; 
+  height: 40px; 
+}
