--- a/mod2/src/App.css
+++ b/mod2/src/App.css
@@ -35,7 +35,7 @@
 /* Body styles */
 body {
   font-family: Arial, sans-serif;
-  background-color: #f5f5f5;
+  background-color: #494949;
 }
 
 /* Container styles */
@@ -92,7 +92,7 @@ body {
   height: auto;
   border: 1px solid #ccc;
   border-radius: 5px;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 5px rgba(250, 246, 246, 0.1);
   margin-bottom: 10px;
 }
 
@@ -113,6 +113,7 @@ body {
   font-size: 28px;
   margin-bottom: 10px;
   text-transform: capitalize;
+  
 }
 
 /* Styles for the image */
@@ -132,6 +133,7 @@ body {
 .pokemondata ul {
   list-style: none;
   padding: 0;
+  color:white;
 }
 
 .pokemondata li {
@@ -152,6 +154,7 @@ body {
   display: grid;
   grid-template-columns: repeat(4, 1fr); /* 4 columns */
   grid-gap: 10px; 
+  color:white;
 }
 
 .pokemonCard{
@@ -160,3 +163,11 @@ body {
   text-align: center;
 }
 
+.title {
+  font-size: 36px;
+  color: hsl(0, 0%, 100%);
+  text-align: center;
+  background-color: red;
+  
+
+}
