--- a/mod2/src/App.css
+++ b/mod2/src/App.css
@@ -53,15 +53,19 @@ body {
 
 /* Search input styles */
 .search-input {
+  display: flex ;
   flex: 1;
   padding: 10px;
   font-size: 16px;
   border: 1px solid #ccc;
   border-radius: 5px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /* Search button styles */
 .search-button {
+  display: flex;
   padding: 10px 20px;
   margin-left: 10px;
   background-color: #f37021;
@@ -167,7 +171,8 @@ body {
   font-size: 36px;
   color: hsl(0, 0%, 100%);
   text-align: center;
-  background-color: red;
+  /* border-bottom: 2px solid #000; */
+
   
 
 }
