--- a/mod2/src/App.css
+++ b/mod2/src/App.css
@@ -1,11 +1,14 @@
 /* NavBar.css */
 .navbar {
+  
   background-color: #3243c5;
   border-bottom: 2px solid #000;
   padding: 10px 20px;
 }
 
 .navbar h1 {
+  display: flex;
+  justify-content: center;
   margin: 0;
   font-size: 24px;
   font-weight: bold;
@@ -13,6 +16,7 @@
 }
 
 .links a {
+  
   text-decoration: none;
   color: #ffffff;
   font-weight: bold;
